# kustodian

./: .gitignore  Dockerfile  README.md  kustodian.TestsDiagLookupTest.cs
.github/workflows/: publish.yml
environments_collection/: pyproject.toml  scrape.py  sentinel_scrape.py
kustodian.Tests/: AnalyserTests.cs  BadInputTests.cs  DebugTests.cs  EnvironmentLoaderTests.cs  QueryFactsTests.cs  kustodian.Tests.csproj
kustodian.Tests/data/environments/: defender-xdr.json
kustodian.Tests/data/functions/: AddFlag.json  Enrich.json  FunctionWithJoin.json  ScaleScore.json  TagLabel.json  TagScore.json  TagSeverity.json
kustodian.Tests/data/tables/: AlertInfo.json  DeviceProcessEvents.json
scripts/: collect-environments.py  gen_test_cases.py
src/: Analyser.cs  EnvironmentLoader.cs  ImpactedEntityDiagnostics.cs  NamingConventionDiagnostics.cs  Program.cs  QueryFacts.cs  Types.cs  kustodian.csproj
src/Properties/: launchSettings.json
src/data/environments/: defender-xdr.json  sentinel.json
src/data/functions/: FileProfile.json
src/data/tables/: AACAudit.json  AACHttpRequest.json  AADB2CRequestLogs.json  AADDomainServicesAccountLogon.json  AADDomainServicesAccountManagement.json  AADDomainServicesDNSAuditsDynamicUpdates.json  AADDomainServicesDNSAuditsGeneral.json  AADDomainServicesDirectoryServiceAccess.json  AADDomainServicesLogonLogoff.json  AADDomainServicesPolicyChange.json  AADDomainServicesPrivilegeUse.json  AADDomainServicesSystemSecurity.json  AADGraphActivityLogs.json  (+540 more)
src/environments/: defender-xdr.json  sentinel.json
src/wwwroot/: index.html
(+57 files in other folders)
