[project]
name = "environments-collection"
version = "0.1.0"
description = "Scrape Defender XDR advanced hunting schema"
authors = [
    {name = "jsbarr"}
]
requires-python = "^3.10"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
